// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nodes added should add multiple nodes with unique id 1`] = `
{
  "additionalFields": {
    "layoutData": {
      "x": 10,
      "y": 20,
    },
  },
  "id": "kafka-transaction (copy 1)",
  "output": "kafka_transaction_copy_1_output",
  "service": {
    "id": "paramService",
    "parameters": [
      {
        "expression": {
          "expression": "'3434'",
          "language": "spel",
        },
        "name": "param",
      },
    ],
  },
  "type": "Enricher",
}
`;

exports[`Nodes added should add multiple nodes with unique id 2`] = `
{
  "additionalFields": {
    "layoutData": {
      "x": 10,
      "y": 20,
    },
  },
  "id": "kafka-transaction (copy 2)",
  "output": "kafka_transaction_copy_2_output",
  "service": {
    "id": "paramService",
    "parameters": [
      {
        "expression": {
          "expression": "'3434'",
          "language": "spel",
        },
        "name": "param",
      },
    ],
  },
  "type": "Enricher",
}
`;

exports[`Nodes added should add multiple nodes with unique id 3`] = `
{
  "additionalFields": {
    "layoutData": {
      "x": 10,
      "y": 20,
    },
  },
  "id": "filter (copy 2)",
  "output": "filter_copy_2_output",
  "service": {
    "id": "paramService",
    "parameters": [
      {
        "expression": {
          "expression": "'3434'",
          "language": "spel",
        },
        "name": "param",
      },
    ],
  },
  "type": "Enricher",
}
`;

exports[`Nodes added should add nodes with edges 1`] = `
{
  "additionalFields": {
    "layoutData": {
      "x": 10,
      "y": 20,
    },
  },
  "id": "newNode",
  "output": "new_node_output",
  "service": {
    "id": "paramService",
    "parameters": [
      {
        "expression": {
          "expression": "'3434'",
          "language": "spel",
        },
        "name": "param",
      },
    ],
  },
  "type": "Enricher",
}
`;

exports[`Nodes added should add nodes with edges 2`] = `
{
  "additionalFields": {
    "layoutData": {
      "x": 10,
      "y": 20,
    },
  },
  "id": "kafka-transaction (copy 1)",
  "output": "kafka_transaction_copy_1_output",
  "service": {
    "id": "paramService",
    "parameters": [
      {
        "expression": {
          "expression": "'3434'",
          "language": "spel",
        },
        "name": "param",
      },
    ],
  },
  "type": "Enricher",
}
`;

exports[`Nodes added should add single node 1`] = `
{
  "additionalFields": {
    "layoutData": {
      "x": 10,
      "y": 20,
    },
  },
  "id": "Enricher ID",
  "output": "enricher_id_output",
  "service": {
    "id": "paramService",
    "parameters": [
      {
        "expression": {
          "expression": "'3434'",
          "language": "spel",
        },
        "name": "param",
      },
    ],
  },
  "type": "Enricher",
}
`;

exports[`Nodes added should add single node with unique id 1`] = `
{
  "additionalFields": {
    "layoutData": {
      "x": 10,
      "y": 20,
    },
  },
  "id": "kafka-transaction 1",
  "output": "kafka_transaction_1_output",
  "service": {
    "id": "paramService",
    "parameters": [
      {
        "expression": {
          "expression": "'3434'",
          "language": "spel",
        },
        "name": "param",
      },
    ],
  },
  "type": "Enricher",
}
`;
